--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "mongoose": "^4.3.1",
     "morgan": "^1.6.1",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "supertest": "^1.1.0"
   }
 }
