--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "mongodb": "^2.1.1",
     "mongoose": "^4.3.1",
     "morgan": "^1.6.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
